--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <li><a
             href="https://www.linkedin.com/in/vijay-bhaskar23?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img
               src="/assets/linkedin.svg" alt="linkedin" class="img-fluid social-logos"></a></li>
-        <li><a href="https://github.com/"><img src="/assets/github.svg" alt="github" class="img-fluid social-logos"></a>
+        <li><a href="https://github.com/Vijay-GT"><img src="/assets/github.svg" alt="github"
+              class="img-fluid social-logos"></a>
         </li>
         <li><a href="https://x.com/VijayBh20320081?t=YXPqmL51rziXfO1c7DdAWA&s=08"><img src="/assets/twitter.svg"
               alt="twitter" class="img-fluid social-logos"></a></li>
@@ -73,30 +74,37 @@
   </div>
   <div class="container">
     <div class="skills-media">
-      <ul class="skills text-center" id="skills">
-
-        <li><img src="/assets/html-logo.svg" alt="html" class="img-fluid skills-logo">
+      <ul class="skills">
+        <li class="skill">
+          <img src="./assets/html-logo.svg" alt="html-logo" class="img-fluid-skill">
           <h3 class="skill tittle">HTML</h3>
         </li>
-        <li><img src="/assets/css-logo.svg" alt="css" class="img-fluid skills-logo">
+        <li class="skill">
+          <img src="./assets/css-logo.svg" alt="css-logo" class="img-fluid-skill">
           <h3 class="skill tittle">CSS</h3>
         </li>
-        <li><img src="/assets/bootstrap-logo.svg" alt="bootstrap" class="img-fluid skills-logo">
+        <li class="skill">
+          <img src="./assets/bootstrap-logo.svg" alt="bootstrap-logo" class="img-fluid-skill">
           <h3 class="skill tittle">BOOTSTRAP</h3>
         </li>
-        <li><img src="/assets/js-logo.png" alt="javascript" class="img-fluid skills-logo">
+        <li class="skill">
+          <img src="./assets/js-logo.png" alt="js-logo.png" class="img-fluid-skill">
           <h3 class="skill tittle">JAVASCRIPT</h3>
         </li>
-        <li><img src="/assets/react.png" alt="react" class="img-fluid skills-logo">
-          <h3 class="skill tittle">REACT.JS</h3>
+        <li class="skill">
+          <img src="./assets/react.png" alt="react.png" class="img-fluid-skill">
+          <h3 class="skill tittle">REACT</h3>
         </li>
-        <li><img src="/assets/git.svg" alt="git" class="img-fluid skills-logo">
+        <li class="skill">
+          <img src="./assets/git.svg" alt="git" class="img-fluid-skill">
           <h3 class="skill tittle">GIT</h3>
         </li>
-        <li><img src="/assets/fire-base.svg" alt="firebase" class="img-fluid skills-logo">
+        <li class="skill">
+          <img src="./assets/fire-base.svg" alt="fire-base.svg" class="img-fluid-skill">
           <h3 class="skill tittle">FIREBASE</h3>
         </li>
-        <li><img src="/assets/python.svg" alt="python" class="img-fluid skills-logo">
+        <li class="skill">
+          <img src="./assets/python.svg" alt="python.svg" class="img-fluid-skill">
           <h3 class="skill tittle">PYTHON</h3>
         </li>
       </ul>
